# tryluck

./: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  install.ps1  install.sh
.github/workflows/: ci.yml  release.yml
src/: main.rs
src/commands/: coin.rs  dice.rs  mcp.rs  mod.rs  tarot.rs
