[package]
name = "tryluck"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/fluo10/tryluck"

[dependencies]
clap = { version = "4", features = ["derive"] }
rmcp = { version = "1.1", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
schemars = "1.0"
anyhow = "1"
tracing-subscriber = "0.3"
rand = "0.10"
