[package]
name = "tryluck"
version = "0.2.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Try your luck with AI: randomized tarot, dice, and coin results for creative storytelling and TRPG adventures via CLI and MCP."
repository = "https://github.com/fluo10/tryluck"
keywords = ["mcp", "cli", "random", "tarot", "dice"]
categories = ["command-line-utilities", "games"]

[dependencies]
clap = { version = "4", features = ["derive"] }
rmcp = { version = "1.5", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1.0"
anyhow = "1"
tracing-subscriber = "0.3"
rand = "0.10"
